[package]
name = "audio-theme-downloader"
version = "0.8.0"
edition = "2024"
authors = ["Audio Theme Downloader Contributors"]
description = "Automate theme song downloads for TV shows and anime"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "time", "fs"] }
chromiumoxide = { version = "0.8", features = ["tokio-runtime", "_fetcher-rustls-tokio"] }
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
strsim = "0.11"
async-trait = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
urlencoding = "2.1"
futures = "0.3"
chrono = "0.4"
ctrlc = "3.4"

[dev-dependencies]
proptest = "1.5"
tempfile = "3.8"

[lib]
name = "audio_theme_downloader"
path = "src/lib.rs"

[[bin]]
name = "audio-theme-downloader"
path = "src/main.rs"
