[package]
name = "audio-theme-downloader"
version = "0.9.9"
edition = "2024"
authors = ["Audio Theme Downloader Contributors"]
description = "Automate theme song downloads for TV shows and anime"
license = "MIT"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1.50", features = ["rt-multi-thread", "macros", "process", "time", "fs"] }
chromiumoxide = { version = "0.9", features = ["fetcher", "rustls", "zip8"] }
colored = "3.1"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
strsim = "0.11"
async-trait = "0.1"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12"
urlencoding = "2.1"
futures = "0.3"
chrono = "0.4"
ctrlc = "3.5"

[dev-dependencies]
proptest = "1.5"
tempfile = "3.14"

[lib]
name = "audio_theme_downloader"
path = "src/lib.rs"

[[bin]]
name = "audio-theme-downloader"
path = "src/main.rs"
